# astreinte

./: .gitignore  Cargo.toml  Makefile  README.md  roster.json
.github/workflows/: ci.yml
examples/: people.csv  roaster_sample.json  roster.json  shifts.csv
examples/templates/: semaine.json  weekend.json
scripts/: generate_context.sh
src/: io.rs  lib.rs  model.rs  notification.rs  scheduler.rs  storage.rs  template.rs
src/scheduler/: assignment.rs  conflicts.rs  mod.rs  mutate.rs  types.rs  util.rs
templates/: week-1p.json  weekend-2p.json
tests/: lib_basic.rs  templates.rs
