[package]
name = "astreinte"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
authors = ["Ton Nom <ton.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ton-org/astreinte"
description = "Lib + CLI minimalistes pour gérer des astreintes locales (JSON/CSV), sans base de données."
keywords = ["cli", "scheduling", "oncall", "roster", "astreinte"]
categories = ["command-line-utilities", "date-and-time", "algorithms"]
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:csv"]
logging = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
anyhow = "^1.0"
thiserror = "^1.0"
chrono = { version = "^0.4", features = ["clock", "std", "serde"] }
uuid = { version = "^1.10", features = ["v4", "fast-rng"] }
clap = { version = "^4.5", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }
csv = { version = "^1.3", optional = true }
tempfile = "^3.10"
itoa = "^1.0"

# activables via `--features logging`
tracing = { version = "^0.1", optional = true }
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter"], optional = true }

[dev-dependencies]
insta = "^1.39"
assert_cmd = "^2.0"
predicates = "^3.1"
